# fastfood

./: .gitignore  CMakeLists.txt  README.md  example.cpp
fastfood/: chef.hpp  unique.hpp  unique_flat.hpp  weak_const.hpp  weak_mut.hpp
source/: .food.hpp.kate-swp  .unique.hpp.kate-swp  .unique_flat.hpp.kate-swp  chef.hpp  food.hpp  main.cpp  unique.hpp  unique_flat.hpp  weak.hpp  weak_const.hpp  weak_mut.hpp
